# DuckHound

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: HOW_IT_WORKS.md
duckhound/: __init__.py  __main__.py  app.py  cli.py  config.py
duckhound/core/: __init__.py  alarm.py  engine.py  health.py  keystroke.py  mac_input.py  models.py  permissions.py  responder.py  simulator.py
duckhound/core/backends/: __init__.py  base.py  linux.py  macos.py  windows.py
duckhound/ui/: __init__.py  icons.py  main_window.py  theme.py
duckhound/ui/components/: __init__.py  badge.py  card.py  device_row.py  lockdown_dialog.py  radar.py  sidebar.py  stat_card.py  status_hero.py  threat_meter.py  toast.py  toggle.py
duckhound/ui/pages/: __init__.py  dashboard.py  devices.py  protection.py  settings.py  threats.py
scripts/: capture_screenshots.py  diagnose.py
tests/: test_config.py  test_health.py  test_keystroke.py
